# ntp-time-machine

backend/: Cargo.toml
backend/src/: api.rs  main.rs  models.rs  ntp.rs
backend/src/api/: router.rs  set_time.rs
backend/src/ntp/: format.rs
frontend/: package.json
frontend/src/components/: SetTimeForm.tsx
frontend/src/models/: time.ts
frontend/src/pages/: _document.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/utils/api/: axios.ts  time.ts
