[package]
name = "ntp-time-machine-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.3", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
